--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "framer-motion": "^6.5.1",
+    "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5"
   }
 }
