--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "framer-motion": "^6.5.1",
     "next": "12.0.1",
+    "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
