1. Push latest changes 2. Added Chakra UI

--- a/package.json
+++ b/package.json
@@ -6,12 +6,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/typography": "^0.5.7",
+    "axios": "^0.27.2",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
     "framer-motion": "^6.5.1",
-    "next": "12.0.1",
-    "next-themes": "^0.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "graphql": "^16.6.0",
+    "html-react-parser": "^3.0.4",
+    "jwt-decode": "^3.1.2",
+    "next": "^12.3.1",
+    "next-redux-wrapper": "^8.0.0",
+    "react": "^18.0.0",
+    "react-dom": "18.0.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-icons": "^4.4.0",
+    "react-jwt": "^1.1.6",
+    "react-markdown": "^8.0.3",
+    "react-redux": "^8.0.2",
+    "react-resize-detector": "^7.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
