--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/typography": "^0.5.7",
     "axios": "^0.27.2",
-    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "draftjs-to-markdown": "^0.6.0",
     "framer-motion": "^6.5.1",
     "graphql": "^16.6.0",
     "html-react-parser": "^3.0.4",
