--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "immutable": "^4.1.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5"
   }
